Updated Level Zero support to latest released version of the loader (1.5.0).

--- a/ze/zet_meta_parameters.yaml
+++ b/ze/zet_meta_parameters.yaml
@@ -25,6 +25,12 @@ meta_parameters:
     - [ InArray, pRawData, rawDataSize ]
     - [ InOutScalar, pMetricValueCount ]
     - [ OutArray, pMetricValues, pMetricValueCount ]
+  zetMetricGroupCalculateMultipleMetricValuesExp:
+    - [ InArray, pRawData, rawDataSize ]
+    - [ InOutScalar, pSetCount ]
+    - [ InOutScalar, pTotalMetricValueCount ]
+    - [ OutArray, pMetricCounts, pSetCount ]
+    - [ OutArray, pMetricValues, pTotalMetricValueCount ]
   zetMetricGet:
     - [ InOutScalar, pCount ]
     - [ OutArray, phMetrics, pCount ]
