Demangling is now conditional on the detection of demangle.h.

--- a/configure.ac
+++ b/configure.ac
@@ -48,7 +48,7 @@ AC_CHECK_LIB([dl], [dlopen])
 AC_CHECK_LIB([iberty], [cplus_demangle])
 AC_CHECK_HEADERS([demangle.h], [using_demangle=yes], [using_demangle=no])
 AS_IF([test "x$using_demangle" != xyes],
-  [AC_CHECK_HEADERS([libiberty/demangle.h])])
+  [AC_CHECK_HEADERS([libiberty/demangle.h], [], [AC_MSG_WARN([Couldn't find demangle.h, demangling will be deactivated...])])])
 
 PKG_CHECK_MODULES([LIBFFI], [libffi >= 3.2])
 PKG_CHECK_MODULES([BABELTRACE2], [babeltrace2 >= 2.0])
