Fix broking pipe in xprof.sh

--- a/utils/xprof.sh.erb.in
+++ b/utils/xprof.sh.erb.in
@@ -61,11 +61,14 @@ whichlib() {
                match($1, "^lib") && match($1, p) { print header "/" $1}'
 }
 
-whichlib64() {
+whichlib64_head() {
+  # This function return only the first lib found
+  # This avoid a broken pipe error when the old pattern `whichlib64 $foo | head - n1` was used
   for lib in $(whichlib $1)
   do
     if objdump -a $lib | grep 64 > /dev/null; then
       echo $lib
+      break
     fi
   done
 }
@@ -135,7 +138,7 @@ trace_and_summary() {
 <% if languages.include?("opencl") %>
     if [ -z "$LTTNG_UST_OPENCL_LIBOPENCL" ]
     then
-      export LTTNG_UST_OPENCL_LIBOPENCL=$(whichlib64 libOpenCL.so | head -n 1)
+      export LTTNG_UST_OPENCL_LIBOPENCL=$(whichlib64_head libOpenCL.so)
     fi
     export LD_PRELOAD=$libdir/libTracerOpenCL.so:$LD_PRELOAD
     export LD_LIBRARY_PATH=$pkglibdir/opencl:$LD_LIBRARY_PATH
@@ -143,7 +146,7 @@ trace_and_summary() {
 <% if languages.include?("ze") %>
     if [ -z "$LTTNG_UST_ZE_LIBZE_LOADER" ]
     then
-      export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib64 libze_loader.so | head -n 1)
+      export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib64_head libze_loader.so)
     fi
     export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
     export LD_LIBRARY_PATH=$pkglibdir/ze:$LD_LIBRARY_PATH
@@ -151,7 +154,7 @@ trace_and_summary() {
 <% if languages.include?("cuda") %>
     if [ -z "$LTTNG_UST_CUDA_LIBCUDA" ]
     then
-      export LTTNG_UST_CUDA_LIBCUDA=$(whichlib64 libcuda.so | head -n 1)
+      export LTTNG_UST_CUDA_LIBCUDA=$(whichlib64_head libcuda.so)
     fi
     export LD_PRELOAD=$libdir/libTracerCUDA.so:$LD_PRELOAD
     export LD_LIBRARY_PATH=$pkglibdir/cuda:$LD_LIBRARY_PATH
