--- a/configure.ac
+++ b/configure.ac
@@ -81,7 +81,7 @@ AC_CHECK_FUNCS([atexit clock_gettime ftruncate memmove memset strdup strstr strt
 
 AC_CONFIG_FILES([Makefile
                  utils/Makefile
-                 utils/xprof.sh.erb
+                 xprof/xprof.sh.erb
                  opencl/Makefile
                  ze/Makefile
                  xprof/Makefile
