Add check for required ruby extensions in configure.

--- a/configure.ac
+++ b/configure.ac
@@ -54,6 +54,11 @@ PKG_CHECK_MODULES([LIBFFI], [libffi >= 3.2])
 PKG_CHECK_MODULES([BABELTRACE2], [babeltrace2 >= 2.0])
 PKG_CHECK_MODULES([LTTNG_UST], [lttng-ust >= 2.10])
 
+AX_RUBY_EXTENSION([cast-to-yaml], [yes])
+AX_RUBY_EXTENSION([nokogiri], [yes])
+AX_RUBY_EXTENSION([babeltrace], [yes])
+AX_RUBY_EXTENSION([babeltrace2], [yes])
+
 # Checks for header files.
 AC_CHECK_HEADERS([inttypes.h stddef.h stdint.h stdlib.h string.h unistd.h])
 
