--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -36,6 +36,11 @@ thapi_metadata_LDFLAGS = $(LTTNG_UST_LIBS)
 
 bin_PROGRAMS = thapi_metadata
 
+version:
+	git describe --abbrev=7 --dirty --always --tags > version || echo $(PACKAGE_VERSION) > version
+
+data_DATA = version
+
 CLEANFILES = \
 	lttng/tracepoint_gen.h \
 	$(BUILT_SOURCES)
